fixed a width issue in footer.php.

--- a/themes/inhabitent/sass/_buttons.scss
+++ b/themes/inhabitent/sass/_buttons.scss
@@ -20,7 +20,12 @@
     }
 
     &__color-green {
+        @extend .link-button;
         background: $color__link;
         color: #fff;
+
+        &:hover {
+            background: $color__button-green-hover;
+        }
     }
 }
