--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -56,7 +56,7 @@
     }
 
     .footer__copyright {
-        width: 100vw;
+        // width: 100vw;
         padding: $base__space-unit 0;
         font-family: 'Novecento';
 
