--- a/themes/inhabitent/sass/_media.scss
+++ b/themes/inhabitent/sass/_media.scss
@@ -11,6 +11,15 @@
 	padding: 0;
 }
 
+/* ------- Front Page Media Styles ------- */
+.product-shop-stuff {
+
+	.product-block-item img {
+		width: 70px;
+		height: 70px;
+	}
+}
+
 /* Make sure embeds and iframes fit their containers. */
 
 embed,
