--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -30,6 +30,8 @@ $color__link: #248A83;
 $color__link-visited: #248A83;
 $color__link-hover: #2f1339;
 
+$color__button-green-hover: #19625D;
+
 $color__footer-h3: #d99054;
 $color__footer-h1: #d99054;
 
