--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -26,11 +26,25 @@
 .front-page-hero {
 	background: url("//localhost:3000/inhabitent/wp-content/themes/inhabitent/assets/images/home-hero.jpg") no-repeat center;
 	background-size: cover;
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 /* - Shop Stuff Catagories - */
+body.home.page-template-default {
+	.container {
+		h2 {
+			font-family: 'Novecento';
+			text-transform: uppercase;
+			text-align: center;
+			font-size: $base__space-unit * 1.5;
+			font-weight: normal;
+		}
+	}
+}
 .product-shop-stuff {
 	@extend .container-flex;
 
@@ -67,6 +81,24 @@
 	flex-flow: row nowrap;
 }
 
+/* ------- About Us Page Styles ------- */
+.page-template-about {
+	.entry-header.custom-hero {
+		h1.entry-title {
+			margin-top: 0;
+			color: #fff;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			font-family: 'Novecento';
+			font-size: $base__space-unit * 2.2;
+			text-transform: uppercase;
+			letter-spacing: 2px;
+		}
+	}
+}
+
 
 /* ------- Content Area ------- */
 body:not(.page-template-about):not(.product-template-default):not(.post-type-archive):not(.home) .content-area {
@@ -80,8 +112,16 @@ body:not(.page-template-about):not(.product-template-default):not(.post-type-arc
 .site-content {
 	@extend .container-flex;
 	width: $content__size-width;
-	margin: 0 auto;
 	padding-top: $base__space-unit * 3;
+}
+
+body.home.page-template-default .site-content,
+body.home.page-template-default .site-content .content-area,
+body.page-template-about .site-content,
+body.page-template-about .site-content .content-area, {
+	width: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 /* - Product Styles - */
