--- a/themes/inhabitent/sass/_typography.scss
+++ b/themes/inhabitent/sass/_typography.scss
@@ -71,3 +71,9 @@ big {
 	text-transform: none;
 	text-decoration: none;
 }
+
+.tent-business-hours-class { 
+	.day-of-week {
+		font-weight: bold;
+	}
+}
