--- a/themes/inhabitent/sass/_buttons.scss
+++ b/themes/inhabitent/sass/_buttons.scss
@@ -5,7 +5,6 @@
 /* ------- Button for links ------- */
 .link-button {
     @extend .link-reset;
-    color: #000;
     background: #fff;
     border: 1px solid #000;
     padding: 0.75rem $base__space-unit;
@@ -13,10 +12,14 @@
     font-family: $font__entry-button;
     font-size: 0.9rem;
     line-height: 1;
+    
 
     &:hover {
         background: $color__link;
-        color: #fff;
+
+        a {
+            color: #fff;
+        }
     }
 
     &__color-green {
